# synchronAI

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SIGNAL_TYPES.md  pyproject.toml
docs/: ARCHITECTURE.md  MULTIMODAL_HEATMAPS.md  TRANSFER_LEARNING_FIXES.md  audio_synchrony.md  data_summary.md  fnirs_feature_storage.md  fnirs_generative_methods_results.md  multimodal_v2_kickoff_prompt.md  multimodal_v2_plan.md  ris_bsub_reference.md  transcript_synchrony.md  troubleshooting.md
scripts/: audio_synchrony.sh  audit_dataset.py  av_dataset_summary.py  build_av_manifest.py  calibrate_temperature.py  compare_sweep_results.py  compute_fnirs_qc.py  compute_irr.py  convert_fnirs_tf_to_pt.py  detect_persons.py  extract_audio_features.py  extract_dinov2_features.py  extract_fnirs_features.py  fnirs_dataset_summary.py  fnirs_temporal_attribution.py  generate_fnirs.sh  generate_heatmap.sh  generative_pretrain.sh  neural_pretrain.sh  pack_features.py  plot_fnirs_sweep_results.py  plot_paper_figures.py  plot_sweep_comparison.py  profile_training.py  summarize_sweep_results.py  train_audio_classifier.sh  train_audio_from_features.py  train_cv_synchrony.sh  train_dinov2_features.sh  train_dinov2_synchrony.sh  train_fnirs_from_features.py  train_from_features.py  train_multimodal_from_features.py  train_multimodal_synchrony.sh  train_progressive_features.py
tests/: test_audio_model.py  test_data_loading.py  test_dinov2_encoder.py  test_fusion_modules.py  test_inference.py  test_person_aware_model.py  test_training.py  test_video_model.py  test_wave1_bugfixes.py  test_wavlm_encoder.py
(+135 files in other folders)
